sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: type mismatch;
 found   : Int
 required: scala.collection.generic.CanBuildFrom[Nothing,Int,?]
 for (i <- 0 to 1 to getNombreValeurs()-1) {
                                       ^